--- a/scoreboard-backend/pom.xml
+++ b/scoreboard-backend/pom.xml
@@ -72,5 +72,58 @@
             </plugin>
         </plugins>
     </build>
+    <profiles>
+         <profile>
+            <id>cargo-deploy</id>
+            <pluginRepositories>
+                <pluginRepository>
+                    <id>maven.java.net</id>
+                    <name>Java.net Maven2 Repository</name>
+                    <url>http://download.java.net/maven/2</url>                    
+                </pluginRepository>
+            </pluginRepositories>
+            <build>
+                <plugins>
+                    <plugin>
+                        <groupId>org.codehaus.cargo</groupId>
+                        <artifactId>cargo-maven2-plugin</artifactId>
+                        <version>1.4.14</version>                        
+                        <executions>
+                            <execution>
+                                <id>deploy</id>
+                                <phase>integration-test</phase>
+                                <goals>
+                                    <goal>redeploy</goal>
+                                </goals>
+                            </execution>
+                        </executions>
+                        <configuration>
+                            <container>
+                                <containerId>glassfish4x</containerId>
+                                <type>remote</type>
+                            </container>
+                            <configuration>
+                                <type>runtime</type>
+                                <properties>
+                                    <cargo.hostname>${cargo.hostname}</cargo.hostname>
+                                    <cargo.remote.username>${cargo.remote.username}</cargo.remote.username>
+                                    <cargo.remote.password>${cargo.remote.password}</cargo.remote.password>
+                                    <cargo.glassfish.domain.debug>true</cargo.glassfish.domain.debug>
+                                    <cargo.logging>high</cargo.logging>
+                                </properties>
+                            </configuration>
+                        </configuration>
+                        <dependencies>
+                            <dependency>
+                                <groupId>org.glassfish.main.deployment</groupId>
+                                <artifactId>deployment-client</artifactId>
+                                <version>4.1</version>
+                            </dependency>
+                        </dependencies>
+                    </plugin>
+                </plugins>
+            </build>
+        </profile>
+    </profiles>
 
 </project>
