--- a/scoreboard-backend/pom.xml
+++ b/scoreboard-backend/pom.xml
@@ -70,60 +70,46 @@
                     </execution>
                 </executions>
             </plugin>
+            <plugin>
+            <groupId>org.codehaus.cargo</groupId>
+            <artifactId>cargo-maven2-plugin</artifactId>
+            <version>1.4.9</version>
+            <configuration>
+                <wait>true</wait>
+                <container>
+                    <containerId>glassfish4x</containerId>
+                    <type>local</type>
+                </container>
+                <configuration>
+                    <type>runtime</type>
+                    <properties>
+                        <cargo.hostname>localhost</cargo.hostname>
+                        <cargo.remote.username>admin</cargo.remote.username>
+                        <cargo.remote.password>admin</cargo.remote.password>
+                        <cargo.glassfish.admin.port>4848</cargo.glassfish.admin.port>
+                        <cargo.glassfish.domain.name>domain1</cargo.glassfish.domain.name>
+                    </properties>
+                </configuration>
+                    <deployables>
+                        <deployable>
+                            <groupId>${project.groupId}</groupId>
+                            <artifactId>${project.artifactId}</artifactId>
+                            <type>war</type>
+                            <properties>
+                                <context>/app</context>
+                            </properties>
+                        </deployable>
+                    </deployables>
+
+            </configuration>
+            <dependencies>
+                <dependency>
+                    <groupId>org.glassfish.deployment</groupId>
+                    <artifactId>deployment-client</artifactId>
+                    <version>3.2-b06</version>
+                </dependency>
+            </dependencies>
+        </plugin>
         </plugins>
     </build>
-    <profiles>
-         <profile>
-            <id>cargo-deploy</id>
-            <pluginRepositories>
-                <pluginRepository>
-                    <id>maven.java.net</id>
-                    <name>Java.net Maven2 Repository</name>
-                    <url>http://download.java.net/maven/2</url>                    
-                </pluginRepository>
-            </pluginRepositories>
-            <build>
-                <plugins>
-                    <plugin>
-                        <groupId>org.codehaus.cargo</groupId>
-                        <artifactId>cargo-maven2-plugin</artifactId>
-                        <version>1.4.14</version>                        
-                        <executions>
-                            <execution>
-                                <id>deploy</id>
-                                <phase>integration-test</phase>
-                                <goals>
-                                    <goal>redeploy</goal>
-                                </goals>
-                            </execution>
-                        </executions>
-                        <configuration>
-                            <container>
-                                <containerId>glassfish4x</containerId>
-                                <type>remote</type>
-                            </container>
-                            <configuration>
-                                <type>runtime</type>
-                                <properties>
-                                    <cargo.hostname>${cargo.hostname}</cargo.hostname>
-                                    <cargo.remote.username>${cargo.remote.username}</cargo.remote.username>
-                                    <cargo.remote.password>${cargo.remote.password}</cargo.remote.password>
-                                    <cargo.glassfish.domain.debug>true</cargo.glassfish.domain.debug>
-                                    <cargo.logging>high</cargo.logging>
-                                </properties>
-                            </configuration>
-                        </configuration>
-                        <dependencies>
-                            <dependency>
-                                <groupId>org.glassfish.main.deployment</groupId>
-                                <artifactId>deployment-client</artifactId>
-                                <version>4.1</version>
-                            </dependency>
-                        </dependencies>
-                    </plugin>
-                </plugins>
-            </build>
-        </profile>
-    </profiles>
-
 </project>
