--- a/scoreboard-backend/pom.xml
+++ b/scoreboard-backend/pom.xml
@@ -78,7 +78,7 @@
                 <wait>true</wait>
                 <container>
                     <containerId>glassfish4x</containerId>
-                    <type>local</type>
+                    <type>remote</type>
                 </container>
                 <configuration>
                     <type>runtime</type>
