--- a/scoreboard-backend/pom.xml
+++ b/scoreboard-backend/pom.xml
@@ -96,7 +96,7 @@
                             <artifactId>${project.artifactId}</artifactId>
                             <type>war</type>
                             <properties>
-                                <context>/app</context>
+                                <context>/scoardboard-backend</context>
                             </properties>
                         </deployable>
                     </deployables>
