--- a/scoreboard-backend/pom.xml
+++ b/scoreboard-backend/pom.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>com.edr</groupId>
@@ -13,13 +14,18 @@
         <endorsed.dir>${project.build.directory}/endorsed</endorsed.dir>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
-    
+
     <dependencies>
         <dependency>
             <groupId>javax</groupId>
             <artifactId>javaee-web-api</artifactId>
             <version>7.0</version>
             <scope>provided</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.glassfish.jersey.media</groupId>
+            <artifactId>jersey-media-multipart</artifactId>
+            <version>2.23.2</version>
         </dependency>
     </dependencies>
 
@@ -71,25 +77,25 @@
                 </executions>
             </plugin>
             <plugin>
-            <groupId>org.codehaus.cargo</groupId>
-            <artifactId>cargo-maven2-plugin</artifactId>
-            <version>1.4.9</version>
-            <configuration>
-                <wait>true</wait>
-                <container>
-                    <containerId>glassfish4x</containerId>
-                    <type>remote</type>
-                </container>
+                <groupId>org.codehaus.cargo</groupId>
+                <artifactId>cargo-maven2-plugin</artifactId>
+                <version>1.4.9</version>
                 <configuration>
-                    <type>runtime</type>
-                    <properties>
-                        <cargo.hostname>localhost</cargo.hostname>
-                        <cargo.remote.username>admin</cargo.remote.username>
-                        <cargo.remote.password>admin</cargo.remote.password>
-                        <cargo.glassfish.admin.port>4848</cargo.glassfish.admin.port>
-                        <cargo.glassfish.domain.name>domain1</cargo.glassfish.domain.name>
-                    </properties>
-                </configuration>
+                    <wait>true</wait>
+                    <container>
+                        <containerId>glassfish4x</containerId>
+                        <type>remote</type>
+                    </container>
+                    <configuration>
+                        <type>runtime</type>
+                        <properties>
+                            <cargo.hostname>localhost</cargo.hostname>
+                            <cargo.remote.username>admin</cargo.remote.username>
+                            <cargo.remote.password>admin</cargo.remote.password>
+                            <cargo.glassfish.admin.port>4848</cargo.glassfish.admin.port>
+                            <cargo.glassfish.domain.name>domain1</cargo.glassfish.domain.name>
+                        </properties>
+                    </configuration>
                     <deployables>
                         <deployable>
                             <groupId>${project.groupId}</groupId>
@@ -101,15 +107,15 @@
                         </deployable>
                     </deployables>
 
-            </configuration>
-            <dependencies>
-                <dependency>
-                    <groupId>org.glassfish.deployment</groupId>
-                    <artifactId>deployment-client</artifactId>
-                    <version>3.2-b06</version>
-                </dependency>
-            </dependencies>
-        </plugin>
+                </configuration>
+                <dependencies>
+                    <dependency>
+                        <groupId>org.glassfish.deployment</groupId>
+                        <artifactId>deployment-client</artifactId>
+                        <version>3.2-b06</version>
+                    </dependency>
+                </dependencies>
+            </plugin>
         </plugins>
     </build>
 </project>
