--- a/scoreboard-backend/pom.xml
+++ b/scoreboard-backend/pom.xml
@@ -26,7 +26,7 @@
             <groupId>org.glassfish.jersey.media</groupId>
             <artifactId>jersey-media-multipart</artifactId>
             <version>2.23.2</version>
-
+            <scope>provided</scope>
         </dependency>
     </dependencies>
 
